--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -162,19 +162,19 @@ body {
   color: #3496B5;
 }
 
-.profile-container {
+.contacts-container {
   display: flex;
   justify-content: center;
   align-items: center;
   min-width: 1160px;
 }
 
-.profile-content {
+.contacts-content {
   display: flex;
   justify-content: space-between;
   width: 1160px;
   margin: 20px 0 100px 0;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .left-panel {
@@ -209,181 +209,48 @@ body {
   font-size: 14px;
 }
 
-.menu-list {
-  margin: 0;
-}
-
-.support-list {
-  margin: 0;
-}
-
-.menu-link {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 15px;
-  height: 40px;
-  margin: 0 10px;
-  border-radius: 10px;
-}
-
-.menu-link:hover {
-  background-color: #EEEDED;
-  width: 180px;
-}
-
-.menu-icon-wrapper {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 10px;
-}
-
-.main-profile-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.main-contacts-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   gap: 20px;
+  margin-left: 20px;
+  height: 640px;
+  width: 940px;
 }
 
-.profile-block {
-  width: 940px;
-  height: 320px;
+.contacts-block {
   background-color: white;
   border-radius: 5px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+  padding: 0 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.main-change {
-  margin: 0;
-  padding: 15px 20px 0 0;
-}
-
-.change-text {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.profile-elements {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  padding: 40px 0 0 40px;
-}
-
-.profile-image {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-}
-
-.profile-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 25px;
-  padding-bottom: 40px;
-}
-
-.main-information {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.information {
-  display: flex;
-  flex-direction: row;
-  gap: 50px;
-}
-
-.name-left {
+.contacts-block h2 {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  font-size: 15px;
-  width: 120px;
-}
-
-.name-right p {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 15px;
-  width: 112px;
-}
-
-.full-name {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.full-name h3 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 24px;
+  font-size: 18px;
+  color: #019dcd;
   margin: 0;
+  padding: 0;
 }
 
-.other-content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
-  gap: 20px;
-}
-
-.other-content h3 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  margin: 0;
-}
-
-.other-content p {
+.contacts-block p {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
 
-.other-block {
-  width: 460px;
-  height: 140px;
-  background-color: white;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 30px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.contacts-block a {
+  text-decoration: none;
+  color: #1D446F;
 }
 
-.other-wrapper {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 30px;
-}
-
-.director-image {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  margin-left: 30px;
-}
-
-.other-text {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.profile-footer {
+.contacts-footer {
   width: 100%;
   min-width: 1160px;
   position: relative;
