--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -173,7 +173,7 @@ body {
   justify-content: space-between;
   width: 1160px;
   margin: 20px 0 100px 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .left-panel {
@@ -214,8 +214,8 @@ body {
   grid-template-rows: repeat(3, auto);
   gap: 20px;
   margin-left: 20px;
-  height: 640px;
   width: 940px;
+  height: 640px;
 }
 
 .contacts-block {
