--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -331,7 +331,7 @@ body {
   font-weight: 500;
   font-size: 15px;
   padding: 0;
-  margin: 25px 0 25px 20px;
+  margin: 25px 25px 25px 20px;
   height: 18px;
 }
 
