--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -223,9 +223,8 @@ body {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 15px;
-  padding: 0 15px;
+  justify-content: space-between;
+  padding: 15px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
