--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -278,26 +278,32 @@ body {
 }
 
 .checkbox {
-  width: 16px;
-  height: 16px;
+  width: 15px;
+  height: 15px;
   border: 1px solid #B0AAAA;
   border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.3s;
+  position: relative; 
+}
+
+.checkbox::after {
+  content: '';
+  width: 15px;
+  height: 15px;
+  background-color: transparent; 
+  border-radius: 5px;
+  position: absolute; 
 }
 
 .checkbox.checked {
-  border: none;
-  border-radius: 5px;
+  border-color: #31A3C6;
 }
 
-.checkbox-inner {
-  width: 16px;
-  height: 16px;
+.checkbox.checked::after {
   background-color: #31A3C6;
-  border-radius: 5px;
+  border: 1px solid #31A3C6;
 }
 
 .news-blocks {
