--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -9,7 +9,7 @@
   align-items: center;
   margin-bottom: 20px;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 500;
 }
 
@@ -23,10 +23,11 @@
   color: black;
   width: 25px;
   height: 20px;
+  position: relative;
+  top: -3px;
   margin: 0;
   padding: 0;
-  position: relative;
-  top: -2px;
+  clip-path: inset(0 0 0 0);
 }
 
 .calendar-button:hover {
@@ -45,31 +46,27 @@
   display: flex;
   align-items: center; 
   justify-content: center;
+  font-size: 14px;
   padding: 5px;
 }
 
 .calendar-days {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  justify-content: center;
   font-family: "Roboto", sans-serif;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 400;
-  
 }
 
 .today {
   background-color: #31A3C6;
   color: white;
-  border-radius: 50%; 
+  border-radius: 50%;
+  transform: scale(0.85);
+  font-size: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.calendar-day,
-.calendar-empty-cell {
-  text-align: center;
 }
 
 .calendar-day {
@@ -79,8 +76,16 @@
   width: 20px;
   height: 20px;
   padding: 5px;
+  position: relative;
+  right: -1px;
 }
 
 .calendar-empty-cell {
   visibility: hidden;
+}
+
+.calendar-day span {
+  position: relative;
+  left: -0.5px;
+  top: 0.5px;
 }
