--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -401,7 +401,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
+  justify-content: space-evenly;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
  
@@ -420,7 +420,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
-  margin: 0 0 25px 0;
+  margin: 0;
 }
 
 .home-footer {
